--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="modal">
             <div class="conteudo-modal">
                 <span class="fechar-modal">X</span>
-                <iframe id="video" width="560" height="315" src="http://www.youtube.com/embed/Cb4WV4aXBpk" title="Trailer oficial" frameborder="1" allow="acclerometer; autoplay; clipboard-write; encryted-media; gyroscope; picture-in-picture"
+                <iframe class="aberto" id="video" width="560" height="315" src="http://www.youtube.com/embed/Cb4WV4aXBpk" title="Trailer oficial" frameborder="1" allow="acclerometer; autoplay; clipboard-write; encryted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
             </div>
