--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </main>
 
-    <script src="./js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
